k8s/concept/gitlab/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  annotations:
    # 当使用无域名的Ingress转发规则时,将默认禁用非安全HTTP,强制开启HTTPS。可通过注解关闭强制启用HTTPS的设置
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    #- host:
    - host: k8s.gitlab.cn
      http:
        paths:
          - backend:
              service:
                name: gitlab-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
